Add grievance procedure details to index.html
Added a detailed grievance procedure outlining steps for addressing contract violations, including timelines and escalation processes.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
 <summary class="ta-title">
   <span class="ta-section-title">Tentative Agreements</span>
 </summary>
+
+  <div class="ta-article">
+    <div class="ta-header">
+      <h3>Grievance Procedure</h3>
+      <div class="ta-meta">
+        <span>✅ Agreed on: November 6, 2025</span>
+      </div>
+    </div>
+    <div class="ta-content">
+      <p>
+        Teamsters Local 2024 and Corewell Health East have reached a tentative agreement outlining a clear four-step grievance procedure to ensure contract violations can be addressed and resolved. The process begins with Step 1, where a nurse contacts a union steward and submits a grievance electronically within 10 days of becoming aware of the issue; the immediate supervisor must provide a written response within 10 days. If the issue remains unresolved, Step 2 allows the nurse and union representative to elevate the grievance to Human Resources within 14 days of the supervisor’s response, with HR required to reply no later than 14 days after receiving the grievance. Step 3 provides an additional escalation, allowing the grievance to be presented to Labor Relations within 21 days of HR’s response, and Labor Relations must provide a written response within 21 days. If a satisfactory resolution is still not reached, Step 4 allows the grievance to be referred to arbitration within 21 days of Labor Relations’ response. A rotating panel of seven arbitrators—three selected by Teamsters Local 2024, three by Corewell Health East, and one chosen by those selected arbitrators—will hear grievances, and the arbitrator’s decision will be final and legally binding. This procedure will take effect once a full agreement is reached and ratified by Local 2024 members.
+      </p>
+    </div>
+  </div>
+  
   <div class="ta-article">
     <div class="ta-header">
       <h3>No Strike, No Lockout</h3>
