--- a/index.html
+++ b/index.html
@@ -40,8 +40,21 @@
     </div>
     <div class="ta-content">
       <p>
-        Teamsters Local 2024 and Corewell Health East have reached a tentative agreement outlining a clear four-step grievance procedure to ensure contract violations can be addressed and resolved. The process begins with Step 1, where a nurse contacts a union steward and submits a grievance electronically within 10 days of becoming aware of the issue; the immediate supervisor must provide a written response within 10 days. If the issue remains unresolved, Step 2 allows the nurse and union representative to elevate the grievance to Human Resources within 14 days of the supervisor’s response, with HR required to reply no later than 14 days after receiving the grievance. Step 3 provides an additional escalation, allowing the grievance to be presented to Labor Relations within 21 days of HR’s response, and Labor Relations must provide a written response within 21 days. If a satisfactory resolution is still not reached, Step 4 allows the grievance to be referred to arbitration within 21 days of Labor Relations’ response. A rotating panel of seven arbitrators—three selected by Teamsters Local 2024, three by Corewell Health East, and one chosen by those selected arbitrators—will hear grievances, and the arbitrator’s decision will be final and legally binding. This procedure will take effect once a full agreement is reached and ratified by Local 2024 members.
-      </p>
+Teamsters Local 2024 and Corewell Health East have reached a tentative agreement establishing a clear four-step grievance process to address and resolve contract violations.
+
+**Step 1:**  
+A nurse contacts a union steward and submits a grievance electronically within **10 days** of becoming aware of the issue. The immediate supervisor must provide a **written response within 10 days**.
+
+**Step 2:**  
+If the issue is not resolved, the nurse and union representative may elevate the grievance to **Human Resources within 14 days** of the supervisor’s response. HR must reply **within 14 days** after receiving the grievance.
+
+**Step 3:**  
+If needed, the grievance may be submitted to **Labor Relations within 21 days** of HR’s response. Labor Relations must provide a **written response within 21 days**.
+
+**Step 4 (Arbitration):**  
+If no resolution is reached, the grievance may be referred to arbitration within **21 days** of the Labor Relations response. A rotating panel of **seven arbitrators** will hear cases — **three selected by Teamsters Local 2024, three by Corewell Health East, and one neutral arbitrator selected by those six.** The arbitrator’s decision will be **final and legally binding.**
+
+*This grievance procedure will take effect upon ratification of the full agreement by Local 2024 members.* </p>
     </div>
   </div>
   
