--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 <summary class="ta-title">
   <span class="ta-section-title">Tentative Agreements</span>
 </summary>
-
   <div class="ta-article">
     <div class="ta-header">
       <h3>Grievance Procedure</h3>
@@ -40,21 +39,21 @@
     </div>
     <div class="ta-content">
       <p>
-Teamsters Local 2024 and Corewell Health East have reached a tentative agreement establishing a clear four-step grievance process to address and resolve contract violations.
+<p>Teamsters Local 2024 and Corewell Health East have reached a tentative agreement establishing a clear four-step grievance process to address and resolve contract violations.</p>
 
-**Step 1:**  
-A nurse contacts a union steward and submits a grievance electronically within **10 days** of becoming aware of the issue. The immediate supervisor must provide a **written response within 10 days**.
+<p><strong>Step 1:</strong><br>
+A nurse contacts a union steward and submits a grievance electronically within <strong>10 days</strong> of becoming aware of the issue. The immediate supervisor must provide a <strong>written response within 10 days</strong>.</p>
 
-**Step 2:**  
-If the issue is not resolved, the nurse and union representative may elevate the grievance to **Human Resources within 14 days** of the supervisor’s response. HR must reply **within 14 days** after receiving the grievance.
+<p><strong>Step 2:</strong><br>
+If the issue is not resolved, the nurse and union representative may elevate the grievance to <strong>Human Resources within 14 days</strong> of the supervisor’s response. HR must reply <strong>within 14 days</strong> after receiving the grievance.</p>
 
-**Step 3:**  
-If needed, the grievance may be submitted to **Labor Relations within 21 days** of HR’s response. Labor Relations must provide a **written response within 21 days**.
+<p><strong>Step 3:</strong><br>
+If needed, the grievance may be submitted to <strong>Labor Relations within 21 days</strong> of HR’s response. Labor Relations must provide a <strong>written response within 21 days</strong>.</p>
 
-**Step 4 (Arbitration):**  
-If no resolution is reached, the grievance may be referred to arbitration within **21 days** of the Labor Relations response. A rotating panel of **seven arbitrators** will hear cases — **three selected by Teamsters Local 2024, three by Corewell Health East, and one neutral arbitrator selected by those six.** The arbitrator’s decision will be **final and legally binding.**
+<p><strong>Step 4 (Arbitration):</strong><br>
+If no resolution is reached, the grievance may be referred to arbitration within <strong>21 days</strong> of the Labor Relations response. A rotating panel of <strong>seven arbitrators</strong> will hear cases — three selected by Teamsters Local 2024, three by Corewell Health East, and one neutral arbitrator selected by those six. The arbitrator’s decision will be <strong>final and legally binding.</strong></p>
 
-*This grievance procedure will take effect upon ratification of the full agreement by Local 2024 members.* </p>
+<p><em>This grievance procedure will take effect upon ratification of the full agreement by Local 2024 members.</em></p> </p>
     </div>
   </div>
   
