--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
 <summary class="ta-title">
   <span class="ta-section-title">Tentative Agreements</span>
 </summary>
+
+  <div class="ta-article">
+    <div class="ta-header">
+      <h3>Savings and Severability</h3>
+      <div class="ta-meta">
+        <span>✅ Agreed on: November 6, 2025</span>
+      </div>
+    </div>
+    <div class="ta-content">
+      <p>
+
+<p>This language ensures that if any part of the agreement or its attachments is found to be unlawful or unenforceable, the remaining terms will stay in effect. In that situation, both parties will work together to revise the affected section in a way that complies with the law while maintaining the intent of the original agreement.</p>
+    </div>
+  </div>
+  
   <div class="ta-article">
     <div class="ta-header">
       <h3>Grievance Procedure</h3>
