--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <summary class="ta-title">
   <span class="ta-section-title">Tentative Agreements</span>
 </summary>
-
+<div id="ta-tagline">From the nurses at the table!</div>
   <div class="ta-article">
     <div class="ta-header">
       <h3>Savings and Severability</h3>
