--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <h1>Official Negotiation Updates</h1>
           <p>CHE & Teamsters Local 2024</p>
           <p>Tentative Agreements & Updates</p>
+          <p id="header-tagline">From the nurses at the table!</p>
         </div>
       </div>
     </header>
@@ -30,7 +31,6 @@
 <summary class="ta-title">
   <span class="ta-section-title">Tentative Agreements</span>
 </summary>
-<div id="ta-tagline">From the nurses at the table!</div>
   <div class="ta-article">
     <div class="ta-header">
       <h3>Savings and Severability</h3>
