--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
     <header>
       <div class="container header-flex">
         <img src="logo.png" alt="Teamsters Logo" class="logo" />
-        <div class="site-info">
-          <h1>Official Negotiation Updates</h1>
-          <p>CHE & Teamsters Local 2024</p>
-          <p>Tentative Agreements & Updates</p>
-          <p id="header-tagline">From the nurses at the table!</p>
+<div class="site-info">
+  <h1>Official Negotiation Updates</h1>
+
+  <!-- Tagline call-out under the title -->
+  <div id="header-tagline">From the nurses at the table!</div>
+
+  <p>CHE & Teamsters Local 2024</p>
+  <p>Tentative Agreements & Updates</p>
+</div>
         </div>
       </div>
     </header>
