--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1>Official Negotiation Updates</h1>
 
       <!-- Tagline call-out under the title -->
-      <div id="header-tagline">From the nurses at the table!</div>
+      <div id="header-tagline">FROM: your nurses at the table!</div>
 
       <p>CHE & Teamsters Local 2024</p>
       <p>Tentative Agreements & Updates</p>
