--- a/index.html
+++ b/index.html
@@ -35,6 +35,20 @@
 <summary class="ta-title">
   <span class="ta-section-title">Tentative Agreements</span>
 </summary>
+ <div class="ta-article">
+    <div class="ta-header">
+      <h3>Bulletin Boards</h3>
+      <div class="ta-meta">
+        <span>✅ Agreed on: November 6, 2025</span>
+      </div>
+    </div>
+    <div class="ta-content">
+      <p>
+Bulletin board locations will be mutually agreed upon by the Union and CHE. Both parties will maintain shared access to these secured boards. The Union may post materials related to general Union activities after providing a copy to CHE Human Resources at least five days prior to posting, or as soon as reasonably possible for time-sensitive communications.
+      </p>
+    </div>
+  </div>
+  
   <div class="ta-article">
     <div class="ta-header">
       <h3>Savings and Severability</h3>
