--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@ Bulletin board locations will be mutually agreed upon by the Union and CHE. Both
       <p>
 <p>Teamsters Local 2024 and Corewell Health East have reached a tentative agreement establishing a clear four-step grievance process to address and resolve contract violations.</p>
 
-<p><strong>Step 1:</strong><br>
+<p><strong><u>Step 1:</u></strong><br>
 A nurse contacts a union steward and submits a grievance electronically within <strong>10 days</strong> of becoming aware of the issue. The immediate supervisor must provide a <strong>written response within 10 days</strong>.</p>
 
-<p><strong>Step 2:</strong><br>
+<p><strong><u>Step 2:</u></strong><br>
 If the issue is not resolved, the nurse and union representative may elevate the grievance to <strong>Human Resources within 14 days</strong> of the supervisor’s response. HR must reply <strong>within 14 days</strong> after receiving the grievance.</p>
 
-<p><strong>Step 3:</strong><br>
+<p><strong><u>Step 3:</u></strong><br>
 If needed, the grievance may be submitted to <strong>Labor Relations within 21 days</strong> of HR’s response. Labor Relations must provide a <strong>written response within 21 days</strong>.</p>
 
-<p><strong>Step 4 (Arbitration):</strong><br>
+<p><strong><u>Step 4 (Arbitration):</u></strong><br>
 If no resolution is reached, the grievance may be referred to arbitration within <strong>21 days</strong> of the Labor Relations response. A rotating panel of <strong>seven arbitrators</strong> will hear cases — three selected by Teamsters Local 2024, three by Corewell Health East, and one neutral arbitrator selected by those six. The arbitrator’s decision will be <strong>final and legally binding.</strong></p>
 
 <p><em>This grievance procedure will take effect upon ratification of the full agreement by Local 2024 members.</em></p> </p>
