--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="ta-header">
       <h3>Bulletin Boards</h3>
       <div class="ta-meta">
-        <span>✅ Agreed on: November 6, 2025</span>
+        <span>✓ Agreed on: November 6, 2025</span>
       </div>
     </div>
     <div class="ta-content">
