--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Bulletin board locations will be mutually agreed upon by the Union and CHE. Both
     <div class="ta-header">
       <h3>Savings and Severability</h3>
       <div class="ta-meta">
-        <span>✅ Agreed on: November 6, 2025</span>
+        <span>✓ Agreed on: November 6, 2025</span>
       </div>
     </div>
     <div class="ta-content">
@@ -67,7 +67,7 @@ Bulletin board locations will be mutually agreed upon by the Union and CHE. Both
     <div class="ta-header">
       <h3>Grievance Procedure</h3>
       <div class="ta-meta">
-        <span>✅ Agreed on: November 6, 2025</span>
+        <span>✓ Agreed on: November 6, 2025</span>
       </div>
     </div>
     <div class="ta-content">
@@ -94,7 +94,7 @@ If no resolution is reached, the grievance may be referred to arbitration within
     <div class="ta-header">
       <h3>No Strike, No Lockout</h3>
       <div class="ta-meta">
-        <span>✅ Agreed on: September 18, 2025</span>
+        <span>✓ Agreed on: September 18, 2025</span>
       </div>
     </div>
     <div class="ta-content">
@@ -108,7 +108,7 @@ Until a first contract is reached and ratified, however, Local 2024 retains its 
     <div class="ta-header">
       <h3>Agreement Term</h3>
       <div class="ta-meta">
-        <span>✅ Agreed on: August 7, 2025</span>
+        <span>✓ Agreed on: August 7, 2025</span>
       </div>
     </div>
     <div class="ta-content">
@@ -122,7 +122,7 @@ Until a first contract is reached and ratified, however, Local 2024 retains its 
     <div class="ta-header">
       <h3>Agreement</h3>
       <div class="ta-meta">
-        <span>✅ Agreed on: August 7, 2025</span>
+        <span>✓ Agreed on: August 7, 2025</span>
       </div>
     </div>
     <div class="ta-content">
@@ -136,7 +136,7 @@ Until a first contract is reached and ratified, however, Local 2024 retains its 
     <div class="ta-header">
       <h3>Non-Discrimination</h3>
       <div class="ta-meta">
-        <span>✅ Agreed on: August 6, 2025</span>
+        <span>✓ Agreed on: August 6, 2025</span>
       </div>
     </div>
     <div class="ta-content">
@@ -150,7 +150,7 @@ Until a first contract is reached and ratified, however, Local 2024 retains its 
     <div class="ta-header">
       <h3>Recognition</h3>
       <div class="ta-meta">
-        <span>✅ Agreed on: August 6, 2025</span>
+        <span>✓ Agreed on: August 6, 2025</span>
       </div>
     </div>
     <div class="ta-content">
@@ -175,7 +175,7 @@ Until a first contract is reached and ratified, however, Local 2024 retains its 
     <div class="ta-header">
       <h3>Union Representatives List</h3>
       <div class="ta-meta">
-        <span>✅ Agreed on: August 6, 2025</span>
+        <span>✓ Agreed on: August 6, 2025</span>
       </div>
     </div>
     <div class="ta-content">
@@ -192,7 +192,7 @@ Until a first contract is reached and ratified, however, Local 2024 retains its 
       <span class="ta-badge">MOA</span>
     </h3>
     <div class="ta-meta">
-      <span>✅ Agreed on: July 24, 2025</span>
+      <span>✓ Agreed on: July 24, 2025</span>
     </div>
   </div>
   
