--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
       <h1>Official Negotiation Updates</h1>
 
       <!-- Tagline call-out under the title -->
-      <div id="header-tagline">FROM: Nurses at the table</div>
-
+<div
+  id="header-tagline"
+  style="background:#efc056; color:#ffffff; border-radius:999px; padding:0.35rem 0.9rem; border:1px solid #c99724; box-shadow:0 4px 14px rgba(0,0,0,0.18);"
+>
+  FROM: Nurses at the table
+</div>
       <p>CHE & Teamsters Local 2024</p>
       <p>Tentative Agreements & Updates</p>
     </div>
