--- a/index.html
+++ b/index.html
@@ -19,8 +19,20 @@
       <!-- Tagline call-out under the title -->
 <div
   id="header-tagline"
-  style="background:#efc056; color:#ffffff; border-radius:999px; padding:0.35rem 0.9rem; border:1px solid #c99724; box-shadow:0 4px 14px rgba(0,0,0,0.18);"
+  style="
+    background:#efc056;
+    color:#ffffff;
+    border-radius:999px;
+    padding:0.35rem 0.9rem;
+    border:1px solid #c99724;
+    box-shadow:0 4px 14px rgba(0,0,0,0.18);
+    font-weight:700;
+    font-size:0.85rem;
+    letter-spacing:0.01em;
+  "
 >
+  FROM: Nurses at the table
+</div>
   FROM: Nurses at the table
 </div>
       <p>CHE & Teamsters Local 2024</p>
