--- a/index.html
+++ b/index.html
@@ -248,6 +248,13 @@ Until a first contract is reached and ratified, however, Local 2024 retains its 
 
   <section id="negotiation-updates">
   <h2>Negotiation Updates</h2>
+
+ <details>
+    <summary>November 17-18, 2025</summary>
+<p>Coming Soon</p>
+    </a>
+  </details>
+    
    <details>
     <summary>November 12, 2025</summary>
     <a href="update8.png" target="_blank">
