--- a/index.html
+++ b/index.html
@@ -17,25 +17,7 @@
       <h1>Official Negotiation Updates</h1>
 
       <!-- Tagline pill -->
-      <div
-        id="header-tagline"
-        style="
-          background:#efc056;
-          color:#ffffff;
-          border-radius:999px;
-          padding:0.35rem 0.9rem;
-          border:1px solid #c99724;
-          box-shadow:0 4px 14px rgba(0,0,0,0.18);
-          font-weight:700;
-          font-size:0.85rem;
-          letter-spacing:0.01em;
-          display:inline-flex;
-          align-items:center;
-          justify-content:center;
-        "
-      >
-        FROM: Nurses at the table
-      </div>
+      <p class="tagline-pill">FROM: Nurses at the table</p>
 
       <p>CHE & Teamsters Local 2024</p>
       <p>Tentative Agreements & Updates</p>
