--- a/index.html
+++ b/index.html
@@ -231,8 +231,10 @@ Until a first contract is reached and ratified, however, Local 2024 retains its 
   <section id="negotiation-updates">
   <h2>Negotiation Updates</h2>
 
- <details>
+   <details>
     <summary>November 17-18, 2025</summary>
+    <a href="update8.png" target="_blank">
+      <img src="update8.png" alt="Negotiation Update 8" />
     </a>
   </details>
     
