--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
 <summary class="ta-title">
   <span class="ta-section-title">Tentative Agreements</span>
 </summary>
+
+ <div class="ta-article">
+    <div class="ta-header">
+      <h3>Supervisory Duties</h3>
+      <div class="ta-meta">
+        <span>✓ Agreed on: November 18, 2025</span>
+      </div>
+    </div>
+    <div class="ta-content">
+      <p>
+This tentative agreement ensures that CHE will not require bargaining unity nurses to perform supervisory duties as defined in the National Labor Relations Act. It also acknowledges that several job classifications such as Charge Lead Nurse, Care Coordinator Lead, and Clinical Nurse Specialist are not supervisors and are permitted to perform the duties in their job descriptions. </p>
+    </div>
+  </div>
+  
  <div class="ta-article">
     <div class="ta-header">
       <h3>Bulletin Boards</h3>
