--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
 
  <div class="ta-article">
     <div class="ta-header">
+      <h3>Leaves of Absence</h3>
+      <div class="ta-meta">
+        <span>✓ Agreed on: November 18, 2025</span>
+      </div>
+    </div>
+    <div class="ta-content">
+      <p>
+This tentative agreement outlines the policies and procedures for Family and Medical Leave Act, Sick Leave/MESTA, Personal Leave, Educational Leave, Parental Leave, Military Leave, and other miscellaneous leaves.</div>
+  </div>
+  
+ <div class="ta-article">
+    <div class="ta-header">
       <h3>Supervisory Duties</h3>
       <div class="ta-meta">
         <span>✓ Agreed on: November 18, 2025</span>
