--- a/index.html
+++ b/index.html
@@ -255,6 +255,13 @@ Until a first contract is reached and ratified, however, Local 2024 retains its 
   <h2>Negotiation Updates</h2>
 
    <details>
+    <summary>December 16, 2025</summary>
+    <a href="update11.png" target="_blank">
+      <img src="update11.png" alt="Negotiation Update 11" />
+    </a>
+   </details>
+  
+   <details>
     <summary>December 1, 2025</summary>
     <a href="update10.png" target="_blank">
       <img src="update10.png" alt="Negotiation Update 10" />
