--- a/index.html
+++ b/index.html
@@ -255,6 +255,12 @@ Until a first contract is reached and ratified, however, Local 2024 retains its 
   <h2>Negotiation Updates</h2>
 
    <details>
+    <summary>January 6, 2026</summary>
+    <a href="update12.png" target="_blank">
+      <img src="update12.png" alt="Negotiation Update 12" />
+    </a>
+
+   <details>
     <summary>December 16, 2025</summary>
     <a href="update11.png" target="_blank">
       <img src="update11.png" alt="Negotiation Update 11" />
