--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ Until a first contract is reached and ratified, however, Local 2024 retains its 
     <a href="update12.png" target="_blank">
       <img src="update12.png" alt="Negotiation Update 12" />
     </a>
-
+<details>
    <details>
     <summary>December 16, 2025</summary>
     <a href="update11.png" target="_blank">
