Add negotiation update for January 14, 2026

--- a/index.html
+++ b/index.html
@@ -255,6 +255,13 @@ Until a first contract is reached and ratified, however, Local 2024 retains its 
   <h2>Negotiation Updates</h2>
 
    <details>
+    <summary>January 14, 2026</summary>
+    <a href="update13.png" target="_blank">
+      <img src="update13.png" alt="Negotiation Update 13" />
+    </a>
+   </details>
+    
+   <details>
     <summary>January 8-9, 2026</summary>
     <a href="update12.png" target="_blank">
       <img src="update12.png" alt="Negotiation Update 12" />
