--- a/index.html
+++ b/index.html
@@ -391,67 +391,62 @@
     <span class="ta-section-title">Strike Authorization Questions</span>
   </summary>
 
- <section id="strike-auth">
+  <section id="strike-auth">
 
-  <details>
-    <summary>What is a strike authorization?</summary>
-    <p>
-      A strike authorization is a vote by the membership that gives our union the ability to call a strike if necessary.
-    </p>
-  </details>
+    <details>
+      <summary>What is a strike authorization?</summary>
+      <p>
+        A strike authorization is a vote by the membership that gives our union the ability to call a strike if necessary.
+      </p>
+    </details>
 
-  <details>
-    <summary>Why is a strike authorization vote necessary?</summary>
-    <p>
-      A unified vote to authorize a strike strengthens our position and gives us leverage to secure the contract we deserve. Without it, Corewell will continue to undermine and underestimate the power of 10,000 Teamsters nurses.
-    </p>
-  </details>
+    <details>
+      <summary>Why is a strike authorization vote necessary?</summary>
+      <p>
+        A unified vote to authorize a strike strengthens our position and gives us leverage to secure the contract we deserve. Without it, Corewell will continue to undermine and underestimate the power of 10,000 Teamsters nurses.
+      </p>
+    </details>
 
-  <details>
-    <summary>Does a strike authorization vote mean we are going to strike?</summary>
-    <p>
-      No. A strike authorization does not mean a strike is certain. It gives union leadership and union stewards the option to call a strike if negotiations reach an impasse or if Corewell Health East refuses to meet our demands.
-    </p>
-  </details>
+    <details>
+      <summary>Does a strike authorization vote mean we are going to strike?</summary>
+      <p>
+        No. A strike authorization does not mean a strike is certain. It gives union leadership and union stewards the option to call a strike if negotiations reach an impasse or if Corewell Health East refuses to meet our demands.
+      </p>
+    </details>
 
-  <details>
-    <summary>What would a “no” vote mean?</summary>
-    <p>
-      A “no” vote means we can continue negotiating, but we lose the ability to strike as critical leverage. Corewell will face less pressure to offer a fair contract. We need to show this corporate hospital system that we are prepared, willing, and able to do whatever is necessary to secure the agreement that we rightfully deserve.
-    </p>
-  </details>
+    <details>
+      <summary>What would a “no” vote mean?</summary>
+      <p>
+        A “no” vote means we can continue negotiating, but we lose the ability to strike as critical leverage. Corewell will face less pressure to offer a fair contract. We need to show this corporate hospital system that we are prepared, willing, and able to do whatever is necessary to secure the agreement that we rightfully deserve.
+      </p>
+    </details>
 
-  <details>
-    <summary>
-      Why would our union conduct a strike authorization vote if contract negotiations are still going on?
-    </summary>
-    <p>
-      We have been negotiating with Corewell for months, spending countless hours at the table, and they still refuse to provide counters on our significant proposals. The hospital’s negotiation team is led by an attorney from the same law firm Corewell utilized to try to break the union organizing campaign. All his words and the hospital’s actions have proven they are not bargaining in good faith. Just as we showed Corewell with the overwhelming victory in our historic election, we need to again show Corewell that we are united.
-    </p>
-  </details>
+    <details>
+      <summary>Why would our union conduct a strike authorization vote if contract negotiations are still going on?</summary>
+      <p>
+        We have been negotiating with Corewell for months, spending countless hours at the table, and they still refuse to provide counters on our significant proposals. The hospital’s negotiation team is led by an attorney from the same law firm Corewell utilized to try to break the union organizing campaign. All his words and the hospital’s actions have proven they are not bargaining in good faith. Just as we showed Corewell with the overwhelming victory in our historic election, we need to again show Corewell that we are united.
+      </p>
+    </details>
 
-</section>
-    
-    <section id="public-calendar" class="card">
-      <h2>What’s Next?</h2>
-      <div class="cal-frame">
-        <div class="cal-inner">
-          <iframe
-            src="https://calendar.google.com/calendar/embed?height=400&wkst=1&ctz=America%2FDetroit&showPrint=0&title=Teamsters%20Local%202024&mode=AGENDA&showCalendars=0&src=OTMxNWE2ZDI0ZGRkOGM2NThkMTU3YTFhYjU0YTM3ZTIwOWQ5MjdjNjcwMjc3NDU3NDliODI4NDI0NTJmOTYyNkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23D81B60"
-            title="Teamsters Local 2024 Calendar"
-            loading="lazy"
-            scrolling="no">
-          </iframe>
-        </div>
-      </div>
-    </section>
+  </section>
+</details>
 
-    <footer>
-      <div class="container">
-        <p>© 2026 Teamsters Local 2024. All rights reserved.</p>
-      </div>
-    </footer>
-
+<section id="public-calendar" class="card">
+  <h2>What’s Next?</h2>
+  <div class="cal-frame">
+    <div class="cal-inner">
+      <iframe
+        src="https://calendar.google.com/calendar/embed?height=400&wkst=1&ctz=America%2FDetroit&showPrint=0&title=Teamsters%20Local%202024&mode=AGENDA&showCalendars=0&src=OTMxNWE2ZDI0ZGRkOGM2NThkMTU3YTFhYjU0YTM3ZTIwOWQ5MjdjNjcwMjc3NDU3NDliODI4NDI0NTJmOTYyNkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23D81B60"
+        title="Teamsters Local 2024 Calendar"
+        loading="lazy"
+        scrolling="no">
+      </iframe>
+    </div>
   </div>
-</body>
-</html>
+</section>
+
+<footer>
+  <div class="container">
+    <p>© 2026 Teamsters Local 2024. All rights reserved.</p>
+  </div>
+</footer>
